# scrapy_libcat

./: index.md  pyproject.toml  readme.md
data/: data.json  data_0.json  data_1.json  data_2.json  oneBookLinks.txt
scripts/: main.py
scripts/work_with_book/: aboutBook.py  bookCover.py  bookInfo.py  controlWord.py  dataCollections.py  dataProcessing.py  document.py  getURL.py  loadDataLinks.py  productInfo.py  readPage.py  regexBookPages.py  regexPageBookPages.py  workWithBook.py
src/: links.txt
